# hanflow

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
deploy/docker/: .env.example  Dockerfile  Dockerfile.web  docker-compose.yml  hanflow.yaml.example
examples/: dynamic.yaml  hybrid.yaml  static.yaml
hanflow/: __init__.py  config.py  sdk.py
hanflow/api/: __init__.py  deps.py  ws.py
hanflow/api/routes/: hitl.py  observe.py  runs.py  runs_ws.py  schema.py  webhooks.py  workflows.py
hanflow/atoms/: __init__.py  base.py  execution.py  research.py
hanflow/cli/: client.py  main.py
hanflow/core/: __init__.py  context.py  dsl.py  errors.py  expr.py  result.py  sandbox_contract.py  state.py
hanflow/isolation/: __init__.py  docker_provisioner.py  local_provisioner.py  sandbox.py
hanflow/memory/: __init__.py  filesystem.py  skills.py
hanflow/memory/backends/: local_fs.py
hanflow/models/: __init__.py  governance.py  privacy.py  router.py
hanflow/models/providers/: anthropic.py  base.py  deepseek.py  fake.py  glm.py  ollama.py  openai.py  vllm.py
hanflow/models/strategies/: base.py  cost.py  fallback.py  role.py  static.py  task.py
hanflow/observability/: __init__.py  provider.py  trace.py
hanflow/observability/providers/: __init__.py  langsmith.py  otel.py
hanflow/orchestration/: __init__.py  compiler.py  context_impl.py  registry.py
hanflow/orchestration/nodes/: base.py  control.py  coordinator.py  knowledge.py  leaf.py  state_ops.py
hanflow/persistence/: __init__.py  artifact.py  base.py  checkpoint.py  resume.py  session.py  workspace.py
hanflow/persistence/backends/: local_fs.py  sqlite.py
hanflow/retrieval/: __init__.py  embedding.py  hybrid.py  indexing.py  provider.py  reranker.py
hanflow/retrieval/fulltext/: base.py  memory_fts.py
hanflow/retrieval/vector/: base.py  memory.py
hanflow/runtime/: build_sandbox.py  scheduler.py
hanflow/tools/: __init__.py  bus.py  transport.py
hanflow/tools/builtin/: base.py  code_exec.py  filesystem.py  http_request.py  shell.py  vector_search.py  web_fetch.py  web_search.py
hanflow/workflows/: __init__.py  store.py
migrations/: 001_create_runs_and_hitl_records.py
tests/: conftest.py  test_config.py  test_e2e_v0.py  test_sdk.py  test_smoke.py
tests/api/: conftest.py  test_app.py  test_deps.py  test_hitl_api.py  test_hitl_interrupt.py  test_hitl_phase16.py  test_observe.py  test_run_stream.py  test_runs.py  test_schema.py  test_workflows.py  test_workflows_phase14.py  test_ws.py
tests/atoms/: test_atoms.py
tests/cli/: test_cli.py  test_client.py
tests/core/: test_context.py  test_dsl.py  test_dsl_disabled.py  test_errors.py  test_expr.py  test_result.py  test_sandbox_contract.py  test_state.py
tests/isolation/: conftest.py  test_build_sandbox.py  test_docker_provisioner.py  test_k8s_provisioner_stub.py  test_local_provisioner.py  test_sandbox.py  test_spawn_agent_dedicated.py
tests/memory/: test_memory.py
tests/models/: conftest.py  test_e2e_routing.py  test_governance.py  test_privacy.py  test_providers_base.py  test_providers_fake.py  test_providers_metadata.py  test_providers_stream.py  test_router.py  test_router_stream.py  test_strategies.py  test_stream_chunk.py
tests/observability/: test_langsmith.py  test_otel.py  test_provider.py  test_trace.py
tests/orchestration/: conftest.py  test_context_stream.py  test_llm_executor_stream.py  test_orchestration.py
tests/persistence/: conftest.py  test_artifact.py  test_base.py  test_checkpoint.py  test_integration.py  test_resume.py  test_scheduler.py  test_session.py  test_workspace.py
tests/retrieval/: test_retrieval.py
tests/tools/: conftest.py  test_builtin.py  test_bus.py  test_code_exec.py  test_transport.py
web/: .gitignore  next.config.mjs  package-lock.json  package.json  vitest.config.ts
web/app/: layout.tsx  page.tsx
web/app/hitl/: page.tsx
web/components/: DirtyGuard.tsx
web/components/canvas/: BuildMode.tsx  CanvasNode.tsx  ContextMenu.tsx  EmptyState.tsx  KeyboardManager.tsx  NodePalette.tsx  PlusButtonMenu.tsx  PrimitiveNode.tsx  (+4 more)
web/hooks/: useNodeMeta.ts  useRunStream.ts
web/stores/: canvasStore.ts  hitlStore.ts  inspectorStore.ts  monitorStore.ts  uiStore.ts  workflowStore.ts
web/styles/: tokens.css
web/tests/: buildMode.test.ts  canvasStore.test.ts  clipboard.test.ts  highlight.test.ts  history.test.ts  layout.test.ts  nodeMeta.test.ts  nodeSummary.test.ts  ports.test.ts  schemaCache.test.ts  transform.test.ts  validate.test.ts  validateWorkflow.test.ts
workflows/: Copy of untitled.yaml  dr_9508bc5d.yaml  dup_cc2adbc6.yaml  mf_76136228.yaml  untitled.yaml  w2.yaml
(+47 files in other folders)
