[project]
name = "hanflow"
version = "0.0.0"
description = "Hanflow — Harmony AI Nexus: a high-control agent framework on LangGraph."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hanflow Contributors" }]
dependencies = [
    "pydantic>=2.7,<3",
    "langgraph==1.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]
langsmith = [
    "langsmith>=0.1",
]
otel = ["opentelemetry-api>=1.24", "opentelemetry-sdk>=1.24"]
all = ["hanflow[langsmith,otel]"]

[project.scripts]
hanflow = "hanflow.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hanflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
