[project]
name = "hanflow"
version = "1.1.0"
description = "Hanflow — Harmony AI Nexus: a high-control agent framework on LangGraph."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hanflow Contributors" }]
dependencies = [
    "pydantic>=2.7,<3",
    "langgraph==1.2.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "langgraph-checkpoint-sqlite>=2.0",
    "jsonschema>=4.20",
    "httpx>=0.27",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.0",
    "pytest-httpx>=0.30",
    "websockets>=12.0",
]
langsmith = [
    "langsmith>=0.1",
]
otel = ["opentelemetry-api>=1.24", "opentelemetry-sdk>=1.24"]
postgres = ["langgraph-checkpoint-postgres>=2.0", "asyncpg>=0.29"]
redis = ["redis>=5.0"]
s3 = ["boto3>=1.34"]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.30"]
glm = ["zhipuai>=2.0"]
deepseek = ["openai>=1.30"]  # deepseek uses openai-compatible API
ollama = ["ollama>=0.3"]
vllm = []  # vllm uses openai-compatible API; no extra needed
all = ["hanflow[langsmith,otel,postgres,redis,s3,openai,anthropic,glm,deepseek,ollama]"]

[project.scripts]
hanflow = "hanflow.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hanflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: requires external services (postgres/redis/s3); skipped by default",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"hanflow/cli/main.py" = ["B008"]  # typer.Option in defaults is the documented pattern
